--- a/wedding_photography_one_page_website.html
+++ b/wedding_photography_one_page_website.html
@@ -89,12 +89,12 @@
 <section>
   <h2>Selected Work</h2>
   <div class="gallery">
-    <img src="images/photo1.jpg" alt="Wedding photo 1" />
-    <img src="images/photo1.jpg" alt="Wedding photo 2" />
-    <img src="images/photo1.jpg" alt="Wedding photo 3" />
-    <img src="photo4.jpg" alt="Wedding photo 4" />
-    <img src="photo5.jpg" alt="Wedding photo 5" />
-    <img src="photo6.jpg" alt="Wedding photo 6" />
+    <img src="images/Photo1.jpg" alt="Wedding Photo 1" />
+    <img src="images/Photo1.jpg" alt="Wedding Photo 2" />
+    <img src="images/Photo1.jpg" alt="Wedding Photo 3" />
+    <img src="images/Photo1.jpg" alt="Wedding Photo 4" />
+    <img src="images/Photo1.jpg" alt="Wedding Photo 5" />
+    <img src="images/Photo1.jpg" alt="Wedding Photo 6" />
   </div>
 </section>
 
